--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ivy.sokken.multiposts" >
+    package="ivy.sokken.multiposts2" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -21,7 +21,7 @@
         android:theme="@style/AppTheme"
         android:hardwareAccelerated="true" >
         <activity
-            android:name="ivy.sokken.multiposts.MainActivity"
+            android:name="ivy.sokken.multiposts2.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" >
@@ -32,11 +32,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="ivy.sokken.multiposts.WebActivity"
+            android:name="ivy.sokken.multiposts2.WebActivity"
             android:screenOrientation="unspecified"
             android:configChanges="orientation|screenSize" />
         <activity
-            android:name="ivy.sokken.multiposts.TestActivity"
+            android:name="ivy.sokken.multiposts2.TestActivity"
             android:screenOrientation="unspecified"
             android:configChanges="orientation|screenSize" />
     </application>
